DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Sep-04-2007 patrick     Use new environment variable JCCL_DATA_DIR as a way to
                        look up files in JCCL_BASE_DIR/share/jccl.
                        NEW VERSION: 1.3.4
Sep-04-2007 patrick     Set JCCL_BASE_DIR automatically on all platforms.
Jul-08-2007 patrick     Debug-enabled code linked against the release runtime
                        on Windows is now named the same as optimized code.
                        The debug DLLs are installed in the "debug"
                        subdirectory. On non-Windows platforms, debug-enabled
                        plug-ins no longer use the "_d" name variation and are
                        installed in the "debug" subdirectory.
                        NEW VERSION: 1.3.3
Jun-26-2007 patrick     Changed the preprocessor identification of debug versus
                        optimized to look for JCCL_DEBUG or JUGGLER_DEBUG
                        instead of _DEBUG (and JCCL_OPT or JUGGLER_OPT instead
                        of _OPT).
                        NEW VERSION: 1.3.2
Apr-27-2007 aronb       Allow a jccl::ConfigElement to be added to a
                        jccl::Configuration programatically.
                        NEW VERSION: 1.3.1
Apr-19-2007 aronb       jccl::ConfigManager now emits a signal when a
                        configuration change occurs.
Apr-18-2007 patrick     VR Juggler 2.2 branch created.
                        NEW VERSION: 1.3.0